# missionary-board

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  copy-photos.sh  copy-remote.sh  docker-build.sh  install-sys.sh  install.sh  pyproject.toml
.github/workflows/: docker-build.yaml.disabled
assets/: slate-overrides.scss  styles.scss
src/lcr_session/: session.py
src/mboard/: __init__.py  church.py  database.py  google_auth.py  google_drive.py  google_photos.py  login_page.py  login_required.py  logout_page.py  main.py  missionaries.py  paths.py  setup.py  setup_page.py  slides_page.py  templates.py
static/: app.css  main.css  slide-names.css  slide-photos.css  slide.css  styles.css
system/: mboard-browser.desktop  mboard-reboot.service  mboard-reboot.timer  mboard-unclutter.desktop  mboard-update.service  mboard-update.sh  mboard.desktop  mboard.service  mboard.service.start.sh  run.sh  unclutter.desktop
templates/: base.html  login.html  setup.html  slide-base.html  slide-empty.html  slide-names.html  slide-photos.html  slide.html
tests/: conftest.py  database_test.py  login_page_test.py  missionaries_test.py  setup_page_test.py  slides_page_test.py
tests/mboard_test/: conftest.py  database_test.py  lcr.json  login_page_test.py  missionaries_test.py  setup_page_test.py  slides_page_test.py
