[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eric Smith", email = "eric@esmithy.net"},
]
dependencies = [
    "starlette>=0.23.1",
    "httpx>=0.23.3",
    "jinja2>=3.1.2",
    "uvicorn>=0.20.0",
    "sqlitedict>=2.1.0",
    "cryptography>=39.0.0",
    "python-multipart>=0.0.5",
    "aiogoogle>=5.1.0",
    "Authlib>=1.2.0",
    "argon2-cffi>=21.3.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "isort>=5.11.4",
    "mypy>=0.991",
    "pylint>=2.15.10",
    "pytest>=7.2.1",
    "pre-commit>=2.21.0",
    "pytest-asyncio>=0.20.3",
]

[tool.pdm.scripts]

[tool.pdm.scripts.dev]
cmd = "uvicorn --reload --app-dir src --log-config conf/uvicorn.logger.json mboard.main:app"
help = "Run the web server with auto-reload"

[tool.pdm.scripts.pre]
cmd = "pre-commit run --all-files"
help = "Run pre-commit checks on all files"

[tool.pdm.scripts.styles]
cmd = "sass --style=compressed --no-source-map --update assets/styles.scss static/styles.css"
help = "Build the styles.css file"

[tool.pdm.scripts.test]
cmd = "pytest"
help = "Run the tests"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.general]
init-hook="import sys; sys.path.append('src')"

[tool.pylint.messages_control]
disable = """
missing-function-docstring,
too-few-public-methods,
"""

[tool.pylint.basic]
good-names = "db, ex"

[tool.pytest.ini_options]
# Allow tests to import application files by updating pythonpath. See:
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#choosing-a-test-layout-import-rules
pythonpath = "src"

# Show slowest tests.
addopts = "--durations=5"
